--- a/main.ipynb
+++ b/main.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f307141a059fe403af966647880ef4ea679fd434dc3b745bd619d23b522de3f2"
+  "signature": "sha256:bad06a3d1b569e1b06a7b00cb022bd49f94cde310d692646698a8199017a0144"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -115,17 +115,6 @@
       "day_4 = data[69:92]\n",
       "# print(day_4)\n",
       "\n",
-      "# 4 x 4 subplot\n",
-      "# plt.rc('lines', linewidth=3.0)\n",
-      "# plt.figure(num=None, figsize=(16, 10), dpi=100, facecolor='w', edgecolor='k')\n",
-      "# # plt.subplot(2,2,1).set_title('day 1')\n",
-      "# # plt.plot(day_1.time,day_1['count'])\n",
-      "# # plt.subplot(2,2,2).set_title('day 2')\n",
-      "# # plt.plot(day_2.time,day_2['count'])\n",
-      "# # plt.subplot(2,2,3).set_title('day 3')\n",
-      "# # plt.plot(day_3.time,day_3['count'])\n",
-      "# # plt.subplot(2,2,4).set_title('day 4')\n",
-      "# # plt.plot(day_4.time,day_4['count'])\n",
       "\n",
       "f, (ax1, ax2, ax3, ax4) = plt.subplots(4, sharex=True, sharey=True)\n",
       "ax1.plot(day_1.time,day_1['count'])\n",
@@ -166,30 +155,29 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As you can see, for working days (the second 2) there is a clear spike during "
+      "As you can see, for working days (the second 2) there is a clear spike during morning and afternoon rushes."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#plottign below\n",
-      "toplot = data[['time','count']]\n",
-      "timeplot = pd.Series(list(toplot['time']))\n",
-      "countplot= pd.Series(list(toplot['count']))\n",
-      "\n",
-      "# print(toplot.shape)\n",
-      "# toplot= (toplot.groupby('time',sort=True).sum())/270\n",
-      "# toplot = toplot.grouby(toplot.pd.tseries.index.hour)\n",
-      "# print(toplot.head(30))\n",
-      "# plt.figure()\n",
-      "# plt.plot(toplot)\n",
-      "# pd.tools.plotting.scatter_matrix(data)\n",
-      "# plt.show()"
+      "# 4 x 4 subplot decided not to use\n",
+      "# plt.rc('lines', linewidth=3.0)\n",
+      "# plt.figure(num=None, figsize=(16, 10), dpi=100, facecolor='w', edgecolor='k')\n",
+      "# # plt.subplot(2,2,1).set_title('day 1')\n",
+      "# # plt.plot(day_1.time,day_1['count'])\n",
+      "# # plt.subplot(2,2,2).set_title('day 2')\n",
+      "# # plt.plot(day_2.time,day_2['count'])\n",
+      "# # plt.subplot(2,2,3).set_title('day 3')\n",
+      "# # plt.plot(day_3.time,day_3['count'])\n",
+      "# # plt.subplot(2,2,4).set_title('day 4')\n",
+      "# # plt.plot(day_4.time,day_4['count'])"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 132
     },
     {
      "cell_type": "code",
